<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        tools:ignore="Autofill,TextFields"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="Autofill,TextFields"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/botao_login"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>


    <Button
        android:id="@+id/botao_registar"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/register"/>



</LinearLayout>